# oxidoc-highlight

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: release.yml  test.yml
benches/: highlight.rs
src/: escape.rs  lib.rs  scanner.rs  token.rs
src/lang/: bash.rs  c.rs  css.rs  diff.rs  go.rs  html.rs  java.rs  javascript.rs  json.rs  markdown.rs  mod.rs  php.rs  python.rs  rdx.rs  rust.rs  sql.rs  toml.rs  xml.rs  yaml.rs
tests/: integration.rs
