[package]
name = "oxidoc-highlight"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Lightweight syntax highlighting for documentation engines"
repository = "https://github.com/oxidoc-lab/oxidoc-highlight"
homepage = "https://github.com/oxidoc-lab/oxidoc-highlight"
documentation = "https://docs.rs/oxidoc-highlight"
readme = "README.md"
keywords = [
  "syntax-highlighting",
  "highlighter",
  "code",
  "wasm",
  "documentation",
]
categories = ["text-processing", "wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
fluxbench = "0.1"

[features]
default = []
wasm = ["wasm-bindgen"]

[[bench]]
name = "highlight"
harness = false
